fix: actualizar evento de la agenda a R. Madrid vs. Barça

--- a/src/app/agenda-evento-text/agenda-evento-text.component.html
+++ b/src/app/agenda-evento-text/agenda-evento-text.component.html
@@ -2,11 +2,11 @@
   <h3 class="evento-text">SUPERCOPA DE ESPAÑA</h3>
   <div class="mini-separator"></div>
   <span class="agenda-text">
-    <strong>R. Madrid vs. Atlético</strong> |
-    &nbsp;<i class="bi bi-calendar-date"></i> 08/01 &nbsp;<i class="bi bi-clock"></i> 20:00h
+    <strong>R. Madrid vs. Barça</strong> |
+    &nbsp;<i class="bi bi-calendar-date"></i> 11/01 &nbsp;<i class="bi bi-clock"></i> 20:00h
   </span>
   <span style="font-weight: bold; font-size: larger;">
-    <i class="bi bi-tv"></i>&nbsp; M+ LALIGA
+    <i class="bi bi-tv"></i>&nbsp; M+ LALIGA // Movistar Plus+
   </span>
   <!-- <br /> -->
   <!-- <span style="font-style: italic">
