Cambiar info enlaces + cambiar logo a los que se ven bien

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -306,7 +306,8 @@
 
   <p class="last-update">
     <i class="bi bi-info-circle-fill" style="margin-right: 2px"></i>
-    Los enlaces se actualizan automáticamente todos los días.
+    Haz clic en una de las opciones o copia el enlace para abrir el canal. Si una opción no funciona, prueba con otra. Si no sabes cómo reproducir los enlaces, consulta la sección de
+    "Cómo reproducir enlaces Ace Stream" más abajo.
   </p>
 
   <div class="search-container">
