Añadir agenda de Copa del Rey

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -220,7 +220,7 @@
       <iframe
         id="ftv_iframe_1"
         name="ftv_iframe_1"
-        src="https://widgets.futbolenlatv.com/partidos/competition/liga-campeones?color=007eff&culture=es-ES"
+        src="https://widgets.futbolenlatv.com/partidos/competition/copa-del-rey?color=007eff&culture=es-ES"
         width="400"
         height="401"
         frameborder="0"
@@ -239,7 +239,7 @@
       <iframe
         id="ftv_iframe_2"
         name="ftv_iframe_2"
-        src="https://widgets.futbolenlatv.com/partidos/competition/europa-league?color=007eff&culture=es-ES"
+        src="https://widgets.futbolenlatv.com/partidos/competition/liga-campeones?color=007eff&culture=es-ES"
         width="400"
         height="401"
         frameborder="0"
@@ -258,7 +258,7 @@
       <iframe
         id="ftv_iframe_3"
         name="ftv_iframe_3"
-        src="https://widgets.futbolenlatv.com/partidos/equipo/athletic-club-de-bilbao?color=007eff&culture=es-ES"
+        src="https://widgets.futbolenlatv.com/partidos/competition/europa-league?color=007eff&culture=es-ES"
         width="400"
         height="401"
         frameborder="0"
@@ -275,15 +275,34 @@
         </div>
       }
       <iframe
-        id="ftv_iframe"
-        name="ftv_iframe"
-        src="https://widgets.futbolenlatv.com/partidos/competition/premier-league?color=007eff&culture=es-ES"
+        id="ftv_iframe_4"
+        name="ftv_iframe_4"
+        src="https://widgets.futbolenlatv.com/partidos/equipo/athletic-club-de-bilbao?color=007eff&culture=es-ES"
         width="400"
         height="401"
         frameborder="0"
         scrolling="auto"
         style="margin-bottom: 10px"
         (load)="onIframeLoad(4)"
+      ></iframe>
+    </div>
+    <div class="iframe-container">
+      @if (loading[5]) {
+        <div class="spinner-container">
+          <mat-spinner class="light-blue-spinner" diameter="78"></mat-spinner>
+          <span class="loading-text">Cargando...</span>
+        </div>
+      }
+      <iframe
+        id="ftv_iframe_5"
+        name="ftv_iframe_5"
+        src="https://widgets.futbolenlatv.com/partidos/competition/premier-league?color=007eff&culture=es-ES"
+        width="400"
+        height="401"
+        frameborder="0"
+        scrolling="auto"
+        style="margin-bottom: 10px"
+        (load)="onIframeLoad(5)"
       ></iframe>
     </div>
   </div>
