--- a/src/app/agenda-evento-text/agenda-evento-text.component.html
+++ b/src/app/agenda-evento-text/agenda-evento-text.component.html
@@ -1,15 +1,22 @@
 <div class="agenda-evento-text">
-  <h3 class="evento-text">SUPERCOPA DE ESPAÑA</h3>
+  <h3 class="evento-text">CHAMPIONS LEAGUE - ÚLTIMA JORNADA</h3>
   <div class="mini-separator"></div>
   <span class="agenda-text">
-    <strong>R. Madrid vs. Barça</strong> |
-    &nbsp;<i class="bi bi-calendar-date"></i> 11/01 &nbsp;<i class="bi bi-clock"></i> 20:00h
+    &nbsp;<i class="bi bi-calendar-date"></i> 27/01 &nbsp;<i class="bi bi-clock"></i> 21:00h<br><br>
+    <strong>Athletic vs. Sporting</strong>
   </span>
-  <span style="font-weight: bold; font-size: larger;">
-    <i class="bi bi-tv"></i>&nbsp; M+ LALIGA // Movistar Plus+
+  <span style="font-weight: bold;">
+    <i class="bi bi-tv"></i>&nbsp; M+ Liga de Campeones 4
   </span>
-  <!-- <br /> -->
-  <!-- <span style="font-style: italic">
+  ____
+  <span class="agenda-text">
+    <strong>MultiChampions</strong>
+  </span>
+  <span style="font-weight: bold;">
+    <i class="bi bi-tv"></i>&nbsp; M+ Liga de Campeones 6
+  </span>
+  <br />
+  <span style="font-style: italic">
     Resto de partidos consultar en Agenda Deportiva
-  </span> -->
+  </span>
 </div>
