Actualizar enlace en la sección de otra web (Elcano.top)

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -466,7 +466,7 @@
     </p>
     <div class="otra-web-links">
       <a
-        href="https://ipfs.io/ipns/elcano.top"
+        href="https://ipfs.io/ipns/k51qzi5uqu5di462t7j4vu4akwfhvtjhy88qbupktvoacqfqe9uforjvhyi4wr/"
         target="_blank"
         class="otra-web-link"
         style="text-decoration: none"
