Agregar archivo links-meta.json y actualizar lógica para obtener la última actualización de enlaces

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -170,7 +170,7 @@
   </nav>
 
   <p class="last-update">
-    Última actualización web:
+    Última actualización enlaces:
     @if (lastUpdate) {
       <span> {{ lastUpdate | date: "dd/MM/yyyy HH:mm" }}h </span>
     } @else {
