Actualizar instrucciones para reproducir enlaces Ace Stream en dispositivos

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -510,8 +510,8 @@
     <h3 class="how-to-play-header">CÓMO REPRODUCIR ENLACES ACE STREAM</h3>
     <div class="mini-separator"></div>
     <p class="how-to-play-text">
-      Para reproducir los enlaces Ace Stream en tu dispositivo necesitas tener
-      instalado Ace Stream Media. Para Windows, puedes descargarlo desde la
+      Para reproducir los enlaces Ace Stream necesitas tener
+      instalado Ace Stream en tu dispositivo. Para Windows, puedes descargarlo desde la
       página oficial de Ace Stream, haciendo clic
       <a href="https://www.acestream.org/?page=products" target="_blank">aquí</a
       >. Para Android, puedes descargarlo desde la
@@ -519,7 +519,7 @@
         href="https://play.google.com/store/apps/details?id=org.acestream.node"
         target="_blank"
         >Google Play Store</a
-      >.
+      >. Para Android TV, desplázate un poco más abajo para ver las instrucciones específicas. <br /><br />
       <i
         class="bi bi-exclamation-triangle-fill"
         style="color: #ffc107; margin-right: 5px; vertical-align: middle"
